--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,6 +31,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   quickstart_dbt_project:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    transform:
+        schema: transform
+        materialized: view
+    analysis:
+        schema: analysis
+        materialized: view
